tests/errors/parser/invalid-width3.expect
---CODE---
1
---STDERR---
Error: tests/errors/parser/invalid-width3.futil
4 |    r.in = 1'o10;
  |           ^^^^^ Parse error
Cannot represent given literal '10' in 1 bit
